# CPP-design-parttern

./: README.md
DecoratorPaerrn/: CMakeLists.txt  READ.ME  beverage.cpp  beverage.h  condimentdecorator.cpp  condimentdecorator.h  espresso.cpp  espresso.h  houseblend.cpp  houseblend.h  main.cpp  mocha.cpp  mocha.h  soy.cpp  soy.h  whip.cpp  whip.h
Factory/: CMakeLists.txt  main.cpp
Factory/pizaa/: cheesepizza.cpp  cheesepizza.h  pizza.cpp  pizza.h  veggiepizza.cpp  veggiepizza.h
Factory/samplefactory/: pizzastore.cpp  pizzastore.h  simplepizzafactory.cpp  simplepizzafactory.h
Iterpattern/: CMakeLists.txt  DinermenuIterator.h  (+8 more)
StragePaterrn/: CMakeLists.txt  README.md
StragePaterrn/duck/: CMakeLists.txt  duck.cpp  duck.h  mallardduck.cpp  mallardduck.h  redduck.cpp  redduck.h
StragePaterrn/flyable/: CMakeLists.txt  flybehavior.h  flynoway.cpp  flynoway.h  flywithwings.cpp  flywithwings.h
StragePaterrn/quackable/: CMakeLists.txt  mutequack.cpp  mutequack.h  quack.cpp  quack.h  quackbehavior.h  squeak.cpp  squeak.h
StragePaterrn/src/: main.cpp
StragePaterrn/utest/: CMakeLists.txt  test_miniducksimulator.cpp
observerParttern/: CMakeLists.txt  currentconditiondisplay.cpp  currentconditiondisplay.h  data.h  forecastdisplay.cpp  forecastdisplay.h  main.cpp  observe.h  statisticsdisplay.cpp  statisticsdisplay.h  subject.h  weatherdata.cpp  weatherdata.h
simple_factory/: CMakeLists.txt  cheesepizza.cpp  cheesepizza.h  clampizza.cpp  clampizza.h  main.cpp  pizza.cpp  pizza.h  pizzastore.cpp  pizzastore.h  simplepizzafactory.cpp  simplepizzafactory.h  veggiepizza.cpp  veggiepizza.h
(+249 files in other folders)
