CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(testduck)
SET(CMAKE_CXX_STANDARD 11)

INCLUDE_DIRECTORIES(/usr/local/include/)

ADD_SUBDIRECTORY(duck)
ADD_SUBDIRECTORY(flyable)
ADD_SUBDIRECTORY(quackable)

ADD_SUBDIRECTORY(utest)

AUX_SOURCE_DIRECTORY(. DIR_SRC)

ADD_EXECUTABLE(testduck  ${DIR_SRC})
TARGET_LINK_LIBRARIES(testduck Flyable Quack Duck)






